[package]
name = "proptest-http-message"
version = "0.1.0"
edition = "2024"
description = "Proptest strategies for generating HTTP request and response messages or individual components components"
license = "MIT OR Apache-2.0"
repository = "https://github.com/a-irizi/proptest-http-message"
homepage = "https://github.com/a-irizi/proptest-http-message"
documentation = "https://docs.rs/proptest-http-message"
readme = "README.md"
authors = ["Anass IRIZI"]
keywords = ["proptest", "http", "strategy", "testing", "fuzzing"]
categories = ["development-tools::testing"]
rust-version = "1.85"


[dependencies]
array-concat = "0.5.5"
proptest = "1.9.0"
rand = "0.9.2"

[dev-dependencies]
claims = "0.8.0"
url = "2.5.7"
